# lidar_inertial_odometry

./: .gitignore  CMakeLists.txt  README.md  build.sh  plot_benchmark.py
app/: lio_player.cpp
config/: avia.yaml  mid360.yaml  nclt.yaml  ntu_viral.yaml
include/: Estimator.h  LIOViewer.h  PointCloudUtils.h  State.h
src/: Estimator.cpp  LIOViewer.cpp  PointCloudUtils.cpp  State.cpp
src/core/: Estimator.cpp  Estimator.h  LoopClosureDetector.cpp  LoopClosureDetector.h  VoxelMap.cpp  VoxelMap.h
src/util/: ConfigUtils.cpp  ConfigUtils.h  PointCloudUtils.cpp  PointCloudUtils.h
src/viewer/: LIOViewer.cpp  LIOViewer.h
